hphp/hack/test/typecheck/nested_shapes_idx.php.like_types.exp
File "nested_shapes_idx.php", line 8, characters 17-18:
Invalid argument (Typing[4110])
File "nested_shapes_idx.php", line 8, characters 17-18:
Expected shape(?'x' => [unresolved], ...) because Shapes::idx expects a shape
File "nested_shapes_idx.php", line 4, characters 14-46:
But got dynamic because it is an unenforceable type
